k8s/redis/redis-services.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: apprenticeship-redis
  name: redis-service
  namespace: default
spec:
  ports:
    - name: server-port
      port: 6379
      protocol: TCP
      targetPort: 6379
  clusterIP: None
  selector:
    statefulset.kubernetes.io/pod-name: apprenticeship-redis-0
